RESOLVED FIXED204131
AXObjectCache::rootObject should generate the isolated tree.
https://bugs.webkit.org/show_bug.cgi?id=204131
Summary AXObjectCache::rootObject should generate the isolated tree.
Andres Gonzalez
Reported 2019-11-12 16:32:24 PST
AXObjectCache::rootObject should generate the isolated tree.
Attachments
Patch (13.16 KB, patch)
2019-11-12 16:42 PST, Andres Gonzalez
no flags
Patch (14.47 KB, patch)
2019-11-13 05:35 PST, Andres Gonzalez
no flags
Patch (15.49 KB, patch)
2019-11-13 08:52 PST, Andres Gonzalez
no flags
Andres Gonzalez
Comment 1 2019-11-12 16:42:02 PST
Andres Gonzalez
Comment 2 2019-11-13 05:35:39 PST
chris fleizach
Comment 3 2019-11-13 07:49:13 PST
Comment on attachment 383450 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=383450&action=review > Source/WebCore/ChangeLog:8 > + No new tests, no change in functionality. can you put a description of the changes here for what's being accomplished > Source/WebCore/accessibility/AXObjectCache.cpp:674 > + if (!clientSupportsIsolatedTree()) can we separate the isolated tree stuff into a separate function so we can write if (clientSupportsIsloatedTree() return isolateTreeRootObjet() else getOrCreate(m_document.view());
Andres Gonzalez
Comment 4 2019-11-13 08:52:04 PST
chris fleizach
Comment 5 2019-11-13 09:27:55 PST
Comment on attachment 383460 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=383460&action=review > Source/WebCore/accessibility/AXObjectCache.h:198 > + Ref<AXIsolatedTree> generateIsolatedTree(PageIdentifier); ERROR: Source/WebCore/accessibility/AXObjectCache.h:198: 'generateIsolatedTree' is incorrectly named. It should be named 'protector' or 'protectedPageIdentifier'. [readability/naming/protected] [4] Total errors found: 1 in 8 files program finished with exit code 1
chris fleizach
Comment 6 2019-11-13 10:19:56 PST
Comment on attachment 383460 [details] Patch I believe that style checker is wrong. shouldn't apply to function names
Andres Gonzalez
Comment 7 2019-11-13 10:38:52 PST
(In reply to chris fleizach from comment #5) > Comment on attachment 383460 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=383460&action=review > > > Source/WebCore/accessibility/AXObjectCache.h:198 > > + Ref<AXIsolatedTree> generateIsolatedTree(PageIdentifier); > > ERROR: Source/WebCore/accessibility/AXObjectCache.h:198: > 'generateIsolatedTree' is incorrectly named. It should be named 'protector' > or 'protectedPageIdentifier'. [readability/naming/protected] [4] > Total errors found: 1 in 8 files > program finished with exit code 1 This is a style checker script bug that is confusing a method declaration with a variable.
WebKit Commit Bot
Comment 8 2019-11-13 11:00:27 PST
Comment on attachment 383460 [details] Patch Clearing flags on attachment: 383460 Committed r252417: <https://trac.webkit.org/changeset/252417>
WebKit Commit Bot
Comment 9 2019-11-13 11:00:29 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 10 2019-11-13 11:01:21 PST
Note You need to log in before you can comment on or make changes to this bug.