AXObjectCache::rootObject should generate the isolated tree. https://bugs.webkit.org/show_bug.cgi?id=204131

Reviewed by Chris Fleizach.

Source/WebCore:

No new tests, no change in functionality.

AXObjectCache::rootObject now returns an AccessibilityObject or an
IsolatedObject. This makes it possible for client code to use the
isolated tree seamlessly, as long as the client call happens on a
secondary thread. This allows WKTR AccessibilityController to use the
isolated tree in LayoutTests.

* accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::clientSupportsIsolatedTree):
(WebCore::AXObjectCache::rootObject):
(WebCore::AXObjectCache::createIsolatedTreeHierarchy):
(WebCore::AXObjectCache::generateIsolatedTree):
(WebCore::AXObjectCache::rootWebArea):
(WebCore::AXObjectCache::createIsolatedAccessibilityTreeHierarchy): Renamed.
(WebCore::AXObjectCache::generateIsolatedAccessibilityTree): renamed.
* accessibility/AXObjectCache.h:

Source/WebKit:

* WebProcess/WebPage/mac/WKAccessibilityWebPageObjectBase.h:
* WebProcess/WebPage/mac/WKAccessibilityWebPageObjectBase.mm:
(-[WKAccessibilityWebPageObjectBase accessibilityRootObjectWrapper]):
(-[WKAccessibilityWebPageObjectBase clientSupportsIsolatedTree]): Became a member of AXObjectCache.
(-[WKAccessibilityWebPageObjectBase isolatedTreeRootObject]): Deleted.
* WebProcess/WebPage/mac/WKAccessibilityWebPageObjectMac.mm:
(-[WKAccessibilityWebPageObject accessibilityHitTest:]):


Canonical link: https://commits.webkit.org/217460@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252417 268f45cc-cd09-0410-ab3c-d52691b4dbfc