Source/WebKit/WebProcess/WebPage/mac/WKAccessibilityWebPageObjectBase.h
@@ -46,10 +46,6 @@ class WebPage;
 - (id)accessibilityRootObjectWrapper;
 - (id)accessibilityFocusedUIElement;
 
-#if ENABLE(ACCESSIBILITY_ISOLATED_TREE)
-- (BOOL)clientSupportsIsolatedTree;
-#endif
-
 @end
 
 #endif // WKAccessibilityWebPageObjectBase_h
